installer/tests/ui/hasher_io_write.stderr
error[E0277]: the trait bound `Sha256: std::io::Write` is not satisfied
  --> tests/ui/hasher_io_write.rs:15:27
   |
15 |     io::copy(&mut reader, &mut hasher).unwrap();
   |     --------              ^^^^^^^^^^^ the trait `std::io::Write` is not implemented for `Sha256`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `std::io::copy`
  --> $RUST/std/src/io/copy.rs
   |
   | pub fn copy<R: ?Sized, W: ?Sized>(reader: &mut R, writer: &mut W) -> Result<u64>
   |        ---- required by a bound in this function
...
   |     W: Write,
   |        ^^^^^ required by this bound in `copy`
